--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ variables:
 stages:
   - build
   - test
-#  - pages
+  - pages
 
 #This is a template job that's extended below by the real jobs
 # build_cur and build_prev (see, e.g., https://docs.gitlab.com/ee/ci/yaml/#extends).
@@ -104,17 +104,17 @@ test_previous:
   variables:
     LLVM_MAJ_VER: ${LLVM_PREV_MAJ_VER}
 
-# pages:
-#   image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_CUR_MAJ_VER}
-#   stage: pages
-#   dependencies:
-#     - test_latest
-#   script:
-#     # this line refreshes the artifact to avoid rebuilding the coq code
-#     - make touch_deps
-#     - make public
-#   only:
-#     - master
-#   artifacts:
-#     paths:
-#       - public
+pages:
+  image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}
+  stage: pages
+  dependencies:
+    - test_latest
+  script:
+    # this line refreshes the artifact to avoid rebuilding the coq code
+    - make touch_deps
+    - make public
+  only:
+    - master
+  artifacts:
+    paths:
+      - public
