--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,9 +74,12 @@ stages:
 
 testdeps:
   stage: testdeps
+  variables:
+    COREBRANCH: $CI_COMMIT_BRANCH
   trigger:
     project: bedrocksystems/cpp2v
     strategy: depend
+    branch: aa755-master-patch-94797
   only:
     - merge_requests
 
