--- a/theories/lang/dune
+++ b/theories/lang/dune
@@ -1,12 +1,13 @@
 (include_subdirs qualified)
 (coq.theory
- (name bedrock)                ; This will determine the toplevel
+ (name bedrock.lang)                ; This will determine the toplevel
  ; module of your theory, modules will
  ; be MyPlugin.A, etc... when seen from
  ; outside.
 
- (package coq-cpp2v)            ; Adding this line will make your
+ ; (package coq-cpp2v)            ; Adding this line will make your
  ; library installable in the package
+ (package coq-bedrock-auto)
 
  (flags (
    ; We sometimes want to locally override notation (e.g. in proofmode/base.v, bi/embedding.v), and there
