--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ stages:
 #This is a template job that's extended below by the real jobs
 # build_cur and build_prev (see, e.g., https://docs.gitlab.com/ee/ci/yaml/#extends).
 .build:
-  image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}
+  image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}-coq811
   stage: build
   script:
     - mkdir -p build; cd build; CC=`llvm-config-${LLVM_MAJ_VER} --bindir`/clang CXX=`llvm-config-${LLVM_MAJ_VER} --bindir`/clang++ cmake -DLLVM_CONFIG=`which llvm-config-${LLVM_MAJ_VER}` ../; cd ..
@@ -58,7 +58,7 @@ stages:
       - build/bedrock
 
 .test:
-  image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}
+  image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}-coq811
   stage: test
   script:
     - coqc -v
@@ -152,6 +152,7 @@ prepare_pages:
       - public
 
 pages:
+  # XXX we'll have to bump fm-docs as well
   image: registry.gitlab.com/bedrocksystems/docker-image:fm-docs
   stage: pages
   dependencies:
