--- a/coq-cpp2v.opam
+++ b/coq-cpp2v.opam
@@ -14,8 +14,8 @@ dev-repo: "git+https://github.com/bedrocksystems/cpp2v.git"
 depends: [
   "coq" { >= "8.11.2" & < "8.13.0" }
   "coq-ext-lib" { >= "0.11.1" & < "0.12"}
-  "coq-iris" { = "3.3.0" }
-  "coq-iris-string-ident" { = "0.1.0" }
+  "coq-iris" { = "dev.2020-09-14.5.5d04e9aa" }
+  "coq-iris-string-ident" { = "dev" }
 ]
 version: "vdev"
 
