--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ variables:
 stages:
   - build
   - test
+  - build_proofs_downstream
   - release
   - prepare_pages
   - pages
@@ -52,12 +53,18 @@ stages:
     - make -j ${NJOBS} coq
     - rm -f build/bedrock
     - cp -r theories build/bedrock
+    # CI_JOB_ID_COPY is used for downstream jobs to get artifacts from
+    # this build. If we don't rename the variable, gitlab refuses to
+    # pass on the variable to downstream jobs in other projects.
+    - echo "CI_JOB_ID_COPY=$CI_JOB_ID" >> build.env
   artifacts:
     name: cpp2v-${LLVM_MAJ_VER}
     paths:
       - build/gitshas.txt
       - build/cpp2v
       - build/bedrock
+    reports:
+      dotenv: build.env
 
 .test:
   image: registry.gitlab.com/bedrocksystems/docker-image:cpp2v-llvm${LLVM_MAJ_VER}
@@ -105,6 +112,19 @@ test_latest:
 #     - build_previous
 #   variables:
 #     LLVM_MAJ_VER: ${LLVM_PREV_MAJ_VER}
+
+build_proof_cpp2v:
+  stage: build_proofs_downstream
+  trigger:
+    project: bedrocksystems/cpp2v
+    branch: master
+    strategy: depend
+  variables:
+    UPSTREAM_CPP2V_CORE_JOB_ID: $CI_JOB_ID_COPY
+  # similar to build_latest, but not for all branches
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_COMMIT_TAG
 
 .release:
   stage: release
