--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,6 +199,7 @@ prepare_pages:
     - sudo chown coq.coq -R .
     # Clone the Alectryon submodule, but only in the pages jobs
     - git submodule update --init
+    - ls --full-time -lR .
     # Beware: the trailing slash affects the semantics.
     # Excluded flags, compared to -a: -pgoD
     # --omit-dir-times because of https://stackoverflow.com/a/668049/53974 and
@@ -209,7 +210,9 @@ prepare_pages:
         -avc
         --omit-link-times --omit-dir-times
         build/bedrock/ theories
+    - ls --full-time -lR .
     - make touch_deps
+    - ls --full-time -lR .
     - make -j ${NJOBS} doc
   rules:
     - if: $CI_MERGE_REQUEST_IID
