Experiment with fibration

--- a/theories/lang/dune
+++ b/theories/lang/dune
@@ -21,5 +21,6 @@
    -w +deprecated-hint-without-locality
    -w +unknown-option
   ))
+  ; -w -masking-absolute-name
  (theories bedrock.prelude)
 )
