--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,13 +58,25 @@ variables:
     LLVM_MAJ_VER: 13
 
 stages:
-  - build
-  - test
-  - release
-  - prepare_pages
-  - pages
-  - prepare_env_for_downstream
-  - build_proofs_downstream
+  - dune-build
+
+
+.dune-build:
+  extends: .base
+  stage: dune-build
+  script:
+    # Create Directory structure for dune
+    - mkdir -p /tmp/build-dir/fmdeps/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
+    - mkdir -p ~/.cache/ && cp -a $CI_PROJECT_DIR/dune-cache ~/.cache/dune
+    - cd /tmp/build-dir/fmdeps/
+    # Create dune_project file
+    - egrep -v '^;' dune-project.template > dune-project
+    - dune build
+    - cp -a ~/.cache/dune $CI_PROJECT_DIR/dune-cache
+  cache:
+    paths:
+      - dune-cache
+    key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
 
 #This is a template job that's extended below by the real jobs
 # build_{latest,llvm10,public} (see, e.g., https://docs.gitlab.com/ee/ci/yaml/#extends).
