--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,8 @@ dune-build:
   script:
     # Create Directory structure for dune
     - mkdir -p /tmp/build-dir/fmdeps/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
-    - mkdir -p ~/.cache/ && cp -a $CI_PROJECT_DIR/dune-cache ~/.cache/dune
+    - mkdir -p ~/.cache/
+    - cp -a $CI_PROJECT_DIR/dune-cache ~/.cache/dune || true
     - cd /tmp/build-dir/fmdeps/
     # Create dune_project file
     - egrep -v '^;' dune-project.template > dune-project
