--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,15 +67,16 @@ dune-build:
   script:
     # Create Directory structure for dune
     - mkdir -p /tmp/build-dir/fmdeps/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
-    - mkdir -p ~/.cache/
-    - cp -a $CI_PROJECT_DIR/dune-cache ~/.cache/dune || true
-    - cd /tmp/build-dir/fmdeps/cpp2v-core
+    - mkdir -p /tmp/build-dir/_build/
+    - cp -a $CI_PROJECT_DIR/_build /tmp/build-dir/ || true
+    - cd /tmp/build-dir/
     # Create dune_project file
-    - egrep -v '^;' dune-project.template > dune-project
+    - egrep -v '^;' fmdeps/cpp2v-core/dune-project.template > dune-project
+    - ln -sf fmdeps/cpp2v-core/coq-cpp2v-bin.opam coq-cpp2v-bin.opam
     - dune build
-    - cp -a ~/.cache/dune $CI_PROJECT_DIR/dune-cache
+    - cp -a _build $CI_PROJECT_DIR/
   cache:
     paths:
-      - dune-cache
+      - _build
     key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
 
