--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ dune-build:
     - egrep -v '^;' fmdeps/cpp2v-core/dune-project.template > dune-project
     - ln -sf fmdeps/cpp2v-core/coq-cpp2v-bin.opam coq-cpp2v-bin.opam
     - dune build
-    - cp -a _build $CI_PROJECT_DIR/
+    - cp -af _build $CI_PROJECT_DIR/
   cache:
     paths:
       - _build
