--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,18 +67,18 @@ dune-build:
   script:
     # Create Directory structure for dune
     - mkdir -p /tmp/build-dir/fmdeps/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
-      #- mkdir -p ~/.cache/
-      #- cp -af $CI_PROJECT_DIR/_cache ~/.cache/dune || true
+    - mkdir -p ~/.cache/
+    - cp -af $CI_PROJECT_DIR/_cache ~/.cache/dune || true
     - cd /tmp/build-dir/
-    # Create dune_project file
-    - egrep -v '^;' fmdeps/cpp2v-core/dune-project.template > dune-project
+    - egrep -v '^;' fmdeps/cpp2v-core/dune-project.template > dune-project # Create dune_project file
     - ln -sf fmdeps/cpp2v-core/coq-cpp2v-bin.opam coq-cpp2v-bin.opam
     - dune build --cache=enabled --display short 
-    - ls ~/.cache/dune || true # check if cache is available
-      #- cp -af ~/.cache/dune $CI_PROJECT_DIR/_cache
+    - ls ~/.cache/dune || true  # check if cache is available
+    - du -sh $CI_PROJECT_DIR/_cache  # cache size
+    - cp -af ~/.cache/dune $CI_PROJECT_DIR/_cache
   cache:
     paths:
-      - ~/.cache/dune
+      - _cache
     key: "$CI_JOB_NAME"
   tags:
     - fm.shared
