Cleanup dune-build stage and add comments

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,15 +66,13 @@ dune-build:
   stage: dune-build
   script:
     # Create Directory structure for dune
-    - mkdir -p /tmp/build-dir/fmdeps/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
-    - mkdir -p ~/.cache/
-    - mv $CI_PROJECT_DIR/_cache_dune ~/.cache/dune || true
+    - mkdir -p /tmp/build-dir/fmdeps/ ~/.cache/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/
+    - mv $CI_PROJECT_DIR/_cache_dune ~/.cache/dune || true  # Move gitlab cache to dune cache directory
     - cd /tmp/build-dir/
     - egrep -v '^;' fmdeps/cpp2v-core/dune-project.template > dune-project # Create dune_project file
     - ln -sf fmdeps/cpp2v-core/coq-cpp2v-bin.opam coq-cpp2v-bin.opam
-    - echo $DUNE_CACHE_ROOT
     - dune build --cache=enabled --display short 
-    - rm -rf $CI_PROJECT_DIR/_cache_dune || true  
+    - rm -rf $CI_PROJECT_DIR/_cache_dune || true  # Ensure old cache is clear 
     - mv ~/.cache/dune $CI_PROJECT_DIR/_cache_dune
     - du -sh $CI_PROJECT_DIR/_cache_dune  # cache size
   cache:
