--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,12 +34,12 @@
 variables:
   LLVM_CUR_MAJ_VER: "13"
   docker_img_prefix: registry.gitlab.com/bedrocksystems/docker-image
-  fm_docs_img: ${docker_img_prefix}:fm-docs
+  fm_docs_img: ${docker_img_prefix}:fm-docs-coq815
   img_prefix: cpp2v-llvm
 
 # Configs
 .base:
-  image: ${docker_img_prefix}:${img_prefix}${LLVM_MAJ_VER}
+  image: ${docker_img_prefix}:${img_prefix}${LLVM_MAJ_VER}-coq815
 
 .latest:
   extends: .base
