--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -391,16 +391,17 @@ prepare_cpp2v_env:
     DUNE_CACHE: enabled
     DUNE_CACHE_STORAGE_MODE: copy
   before_script:
+    - ./dune-ci/dune_lock_ci.py check_cleanup_job -t ${GRP_CI_TOKEN}
     # Create Directory structure for dune
     # We simulate a dune project composition to work around https://github.com/ocaml/dune/issues/6005.
     - mkdir -p /tmp/build-dir/fmdeps/ ~/.cache/ && cp -ra $CI_PROJECT_DIR /tmp/build-dir/fmdeps/cpp2v-core
-    - time rsync -raz ${DUNE_USER}@${FM_CACHE_SERVER}:${RSYNC_CACHE_PATH}/dune_cache/ ~/.cache/
+    - time ./dune-ci/rsync_dune pull delete
     - ls ~/.cache/dune
     - mkdir -p ~/.config/dune/ ; cp $CI_PROJECT_DIR/dune-ci/dune_config ~/.config/dune/config
 
 .postupdate-dunecache:
   after_script:
-    - rsync -raz ~/.cache/dune ${DUNE_USER}@${FM_CACHE_SERVER}:${RSYNC_CACHE_PATH}/dune_cache
+    - time ./dune-ci/rsync_dune push default
     - ssh ${DUNE_USER}@${FM_CACHE_SERVER} bash -c "'echo `date  +%Y%m%d%H%M%S` - $CI_PROJECT_NAME - $CI_JOB_NAME - $CI_JOB_ID >> ${RSYNC_CACHE_PATH}/test_rsync_fm1.txt'"
 
 dune-build:
